<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pandoroid</string>
    <string name="signing_in">Signing in. Please wait&#8230;</string>
    <string name="signin_failed">Sign-in failed</string>
    <string name="loading">Loading&#8230;</string>
    <string name="baned_song">Buzz-kill&#8230;</string>
    <string name="loved_song">Rock on!</string>
    <string name="retry">Error getting song, retrying&#8230;</string>
    
    <!-- Login Screen Strings -->
    <string name="signin_welcome">Welcome to Pandoroid Radio</string>
    <string name="signin_username">Username:</string>
    <string name="signin_password">Password:</string>
    <string name="signin_login">Login</string>
    
    <string name="pickStation">Select Station</string>
    
    <!-- Menu Strings -->
    <string name="menu_stations">Stations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    
    <!-- About Dialog Text -->
    <string name="about">Pandoroid is an open-sourced Pandora client. 
        It is licensed under the GPLv2. You can get 
        more information, submit bug reports, and view the source by
        visiting the project page at github</string>
        
    <!-- Preference Screen Strings -->
    <string name="behavior">Behavior</string>
    <string name="account">Account Setup</string>
    <string name="username_title">Pandora.com account name</string>
    <string name="username_desc">Email address (or other username) used for pandora.com</string>
    <string name="password_title">Pandora.com password</string>
    <string name="password_desc">Password for your pandora.com account</string>
    <string name="skip_title">Next track on ban</string>
    <string name="skip_desc">Skip to the next song when you "thumb down" a song.</string>
    <string name="resume_title">Resume on Hangup</string>
    <string name="resume_desc">Resume playback automatically when a call is ended.</string>
    <string name="no_network">No network connection</string>
    <string name="no_internet">Pandora\'s servers are unreachable</string>
    <string name="buffering">Buffering&#8230;</string>
    <string name="preparing">Preparing&#8230;</string>
    <string name="no_songs">Retrieving songs&#8230;</string>
    <string name="error_unsupported_api_message">The current Pandora API is unsupported. Please update the app or report this error to the GitHub project page. Details can be found in your system logs.</string>
    <string name="error_unsupported_api_neutral">Report</string>
    <string name="error_report_url">https://github.com/dylanPowers/pandoroid/issues</string>
    <string name="error_positive">Quit</string>
</resources>
